# Differential-Forms

./: .gitignore  .travis.yml  DiffPy.py  DiffPyTest.py  README.md  pyproject.toml  setup.py  test.ipynb
.github/workflows/: python-publish.yml
diffform/: core.py
diffform/tests/: test.ipynb
diffforms/: core.py
diffforms.egg-info/: PKG-INFO  SOURCES.txt
diffforms/gstructures/: SU2.py  Spin7.py
diffforms/tests/: test.ipynb
examples/: Schwarzschild Solution.ipynb
