[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diffform"
version = "0.0.0"
requires-python = ">= 3.12"
dependicies = [
    "sympy >= 1.12",
    "ipython >= 8.17.2"
]
authors = [
    {name = "Adam Shaw"}
]
description  = "A symbolic differential form library."
readme = "README.md"